# agentic-workflow

./: .env.example  .gitignore  .gitmodules  docker-compose.yml  manage.sh  openapi.yaml
.dev/: nginx.conf  (+1 more)
platform/tools-server/: .env.example  .gitignore  README.md  main.py  pyproject.toml
platform/tools-server/accounts/: README.MD  admin.py  auth.py  jwt.py  models.py  permissions.py  serializers.py  urls.py  views.py  viewsets.py
platform/tools-server/accounts/fixtures/: seed_miq_core_admin_account.py  seed_permissions.py
platform/tools-server/accounts/migrations/: 0001_initial.py  0002_remove_team_is_default_servicetoken_owner_team_and_more.py
platform/tools-server/accounts/tests/: test_jwt_auth.py  test_viewsets.py
platform/tools-server/core/: mixins.py  storages.py  urls.py
platform/tools-server/core/settings/: base.py  dev.py  prod.py
platform/tools-server/core/templates/: swagger-ui.html
platform/tools-server/dev_docker/: Dockerfile  start.sh
platform/tools-server/docker/: Dockerfile  start.sh
platform/tools-server/tools/: admin.py  apps.py  cache_keys.py  models.py  permissions.py  serializers.py  signals.py  spectacular_extensions.py  urls.py  views.py  viewsets.py
platform/tools-server/tools/migrations/: 0001_initial.py  0002_accessgrant_approved_by_identifier_and_more.py  0003_normalizedcapability_created_by.py  0004_alter_schemasource_blob.py
platform/tools-server/tools/tests/: __init__.py  test_apis.py  test_schema_source_blob.py  test_wire_and_cache.py
platform/tools-server/tools/utils/: helpers.py  mcp_notify.py  norm_cache.py  (+1 more)
(+501 files in other folders)
